# okasaki-ocaml

./: .ocamlinit  Makefile  README.md  dune-project
ch02/bench/: bench.ml  dune  runner.sh
ch02/lib/: dune
ch02/lib/persist/: list.ml  set_intf.ml
ch02/lib/stack/: stack_custom.ml  stack_intf.ml  stack_list.ml  stack_list_core.ml  stack_list_core.mli  stack_list_custom.ml
ch02/lib/tree/: finite_map.ml  unbalanced_set.ml
ch02/test/: dune  support.ml  support.mli  testsuite.ml
ch02/test/persist/: list_test.ml
ch02/test/tree/: finite_map_test.ml  unbalanced_set_test.ml
ch03/lib/: dune
ch03/lib/heap/: binominal_heap.ml  heap_intf.ml  leftist_heap.ml
ch03/test/: dune  testsuite.ml
ch03/test/heap/: leftist_heap_test.ml
common/: dune  gen.ml  ordered.ml
lib/: dune
test/: dune
